// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableBlockRenderer MarkDownBlock renders editable version correctly 1`] = `
<article>
  <div class="block">
    <div class="preview readOnly">
      <div class="editButton"
           role="button"
           tabindex="0"
      >
        <div>
          <p>
            test
          </p>
        </div>
      </div>
    </div>
  </div>
  <div class="group buttons">
    <button aria-disabled="false"
            class="govuk-button govuk-button--secondary"
            type="button"
    >
      Edit block
    </button>
    <button aria-disabled="false"
            class="govuk-button govuk-button--warning"
            type="button"
    >
      Remove block
    </button>
  </div>
</article>
`;

exports[`EditableBlockRenderer MarkDownBlock renders non-editable version correctly 1`] = `
<article>
  <div class="block">
    <div class="preview readOnly">
      <div>
        <p>
          test
        </p>
      </div>
    </div>
  </div>
  <div class="group buttons">
  </div>
</article>
`;
